--- a/week10/portfolio/index.html
+++ b/week10/portfolio/index.html
@@ -14,8 +14,8 @@
 
         
         <link rel="stylesheet" href="css/bootstrap.css">
-		<link rel="stylesheet" href="css/main.css">
-
+		<link rel="stylesheet" href="css/application.css">
+		<link rel="stylesheet" href="css/normalize.css">
 		
 		<link href='http://fonts.googleapis.com/css?family=Special+Elite' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
