--- a/week10/portfolio/index.html
+++ b/week10/portfolio/index.html
@@ -21,8 +21,10 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
 		<script type ="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type ="text/javascript" src="js/fancy-box/source/jquery.fancybox.pack.js"></script>
-		<link rel="stylesheet" href="js/fancy-box/source/jquery.fancybox.css" type="text/css" media="screen" />
+		<link rel="stylesheet" href="js/fancy-box/source/jquery.fancybox.css" type="text/css" media="screen"></link>
 		<script type ="text/javascript" src="js/main.js"></script>
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"></link>
+
 	
     </head>
     <body>
@@ -110,12 +112,11 @@
 					<div class ="col-lg">
 						<div class="externals">
 							<ul>
-								<li><a class="icons" href="http://instagram.com/qualityonion"><img alt="instagram" src="img/instagram_icon.png" /></a></li>
-								<li><a class="icons" href="https://twitter.com/QualityOnion"><img alt="twitter" src="img/twitter_icon.png" /></a></li>
-								<li><a class="icons" href="https://www.facebook.com/stephenklos"><img alt="facebook" src="img/fb_icon.png" /></a></li>
-								<li><a class="icons" href="https://www.flickr.com/photos/23054248@N04/"><img alt="flickr" src="img/flickr_icon.png" /></a></li>
-								<li><a href="http://www.linkedin.com/pub/stephen-klos/82/446/797">
-										<img alt="linkedin" src="https://static.licdn.com/scds/common/u/img/webpromo/btn_myprofile_160x33.png" width="160" height="33" border="0" alt="View Stephen Klos's profile on LinkedIn"></a></li>
+								<li><a class="icons" title="instagram"href="http://instagram.com/qualityonion"><i class="fa fa-instagram"></i></a></li>
+								<li><a class="icons" title="twitter" href="https://twitter.com/QualityOnion"><i class="fa fa-twitter"></i></a></li>
+								<li><a class="icons" title="spotify" href="http://open.spotify.com/user/qualityonion"><i class="fa fa-spotify"></i></a></li>
+								<li><a class="icons" title="flickr"href="https://www.flickr.com/photos/23054248@N04/"><i class="fa fa-flickr"></i></a></li>
+								<li><a class="icons" title="linkedin" href="http://www.linkedin.com/pub/stephen-klos/82/446/797"><i class="fa fa-linkedin"></i></a></li>
 							</ul>
 						</div>
 						
