--- a/week10/portfolio/index.html
+++ b/week10/portfolio/index.html
@@ -70,34 +70,94 @@
 							<div class="port">
 								<h2>Projects</h2>
 								<ul>
-									<li><a class="fancybox" href="img/celebi.jpg"><img alt="celebi" src="img/celebi500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/geodude.jpg"><img alt="geodude" src="img/geodude500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/hitmonlee.jpg"><img alt="hitmonlee" src="img/hitmonlee500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/wigglytuff.jpg"><img alt="wigglytuff" src="img/wigglytuff500.jpg" /></a></li>
+									<li><a class="fancybox" rel="gallery" href="img/celebi.jpg"><img alt="celebi" src="img/celebi500.jpg" />
+											<div class="box">Celebi</div>
+										</a>
+									</li>
+									<li><a class="fancybox" rel="gallery" href="img/geodude.jpg"><img alt="geodude" src="img/geodude500.jpg" />
+											<div class="box">Geodude</div>
+										</a>
+									</li>		
+									<li><a class="fancybox" rel="gallery" href="img/hitmonlee.jpg"><img alt="hitmonlee" src="img/hitmonlee500.jpg" />
+											<div class="box">Hitmonlee</div>
+										</a>
+									</li>
+									<li><a class="fancybox" rel="gallery" href="img/wigglytuff.jpg"><img alt="wigglytuff" src="img/wigglytuff500.jpg" />
+											<div class="box">Wigglytuff</div>
+										</a>
+									</li>
 								</ul>
 								<ul>
-									<li><a class="fancybox" href="img/gyarados.jpg"><img alt="gyarados" src="img/gyarados500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/sandslash.jpg"><img alt="sandslash" src="img/sandslash500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/vileplume.jpg"><img alt="vileplume" src="img/vileplume500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/charmander.jpg"><img alt="charmander" src="img/charmander500.jpg" /></a></li>
+									<li><a class="fancybox"  rel="gallery" href="img/gyarados.jpg"><img alt="gyarados" src="img/gyarados500.jpg" />
+											<div class="box">Gyarados</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/sandslash.jpg"><img alt="sandslash" src="img/sandslash500.jpg" />
+											<div class="box">Sandslash</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/vileplume.jpg"><img alt="vileplume" src="img/vileplume500.jpg" />
+											<div class="box">Vileplume</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/charmander.jpg"><img alt="charmander" src="img/charmander500.jpg" />
+											<div class="box">Charmander</div>
+										</a>
+									</li>
 								</ul>
 								<ul>
-									<li><a class="fancybox" href="img/tyranitar.jpg"><img alt="tyranitar" src="img/tyranitar500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/poliwag.jpg"><img alt="poliwag" src="img/poliwag500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/koffing.jpg"><img alt="koffing" src="img/koffing500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/pidgeot.jpg"><img alt="pidgeot" src="img/pidgeot500.jpg" /></a></li>
+									<li><a class="fancybox"  rel="gallery" href="img/tyranitar.jpg"><img alt="tyranitar" src="img/tyranitar500.jpg" />
+											<div class="box">Tyranitar</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/poliwag.jpg"><img alt="poliwag" src="img/poliwag500.jpg" />
+											<div class="box">Poliwag</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/koffing.jpg"><img alt="koffing" src="img/koffing500.jpg" />
+											<div class="box">Koffing</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/pidgeot.jpg"><img alt="pidgeot" src="img/pidgeot500.jpg" />
+											<div class="box">Pidgeot</div>
+										</a>
+									</li>
 								</ul>
 								<ul>
-									<li><a class="fancybox" href="img/goldengate.jpg"><img alt="goldengate" src="img/goldengate500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/eagle.jpg"><img alt="eagle" src="img/eagle500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/yosemite.jpg"><img alt="yosemite" src="img/yosemite500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/bokeh.jpg"><img alt="bokeh" src="img/bokeh500.jpg" /></a></li>
+									<li><a class="fancybox"  rel="gallery" href="img/goldengate.jpg"><img alt="goldengate" src="img/goldengate500.jpg" />
+											<div class="box">Golden Gate Bridge</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/eagle.jpg"><img alt="eagle" src="img/eagle500.jpg" />
+											<div class="box">Bald Eagle</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/yosemite.jpg"><img alt="yosemite" src="img/yosemite500.jpg" />
+											<div class="box">Yosemite</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/bokeh.jpg"><img alt="bokeh" src="img/bokeh500.jpg" />
+											<div class="box">Christmas Lights</div>
+										</a>
+									</li>
 								</ul>
 								<ul>
-									<li><a class="fancybox" href="img/deck.jpg"><img alt="abstract" src="img/deck500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/verlander.jpg"><img alt="verlander" src="img/verlander500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/fireworks.jpg"><img alt="fireworks" src="img/fireworks500.jpg" /></a></li>
-									<li><a class="fancybox" href="img/flowers.jpg"><img alt="flowers" src="img/flowers500.jpg" /></a></li>
+									<li><a class="fancybox"  rel="gallery" href="img/deck.jpg"><img alt="abstract" src="img/deck500.jpg" />
+											<div class="box">B&W Abstract</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/verlander.jpg"><img alt="verlander" src="img/verlander500.jpg" />
+											<div class="box">Justin Verlander</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/fireworks.jpg"><img alt="fireworks" src="img/fireworks500.jpg" />
+											<div class="box">Fireworks</div>
+										</a>
+									</li>
+									<li><a class="fancybox"  rel="gallery" href="img/flowers.jpg"><img alt="flowers" src="img/flowers500.jpg" />
+											<div class="box">Flowers</div>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
