--- a/week10/portfolio/index.html
+++ b/week10/portfolio/index.html
@@ -35,7 +35,7 @@
 				</div>
 			</header>
 
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class ="col-lg">
 						<div class="content1">
@@ -62,7 +62,7 @@
 		</div>					
 	
 		<div class="secondbg">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="row">
 					<div class ="col-lg">
 						<div class="content2">
